Try using jreleaser